--- a/src/components/Intro/Intro.module.scss
+++ b/src/components/Intro/Intro.module.scss
@@ -19,7 +19,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: url('./levi-bare-290789.jpg');
+    background: url('./ctzn_voyager.jpg');
     background-size: cover;
     opacity: 0.5;
   }
